--- a/_posts/2014-09-21-services-1.markdown
+++ b/_posts/2014-09-21-services-1.markdown
@@ -5,5 +5,5 @@ category: Services
 title: 享最高的<b>現金回饋</b><br>從您的日常消費開始！
 description: |
 ---
-  不同於傳統折扣，折扣店家由您決定，您值得擁有更自由、更靈活的消費折扣！
-  只要提供您的消費收據，為Saivian公司匯集大數據資料，即可獲得20%現金回饋，全新的大數據時代合作模式，同時也是目前最高的現金回饋率。
+  不同於傳統信用卡折扣，折扣店家由您決定，您值得擁有更自由、更靈活的消費折扣！
+  只要提供您的消費收據，為Saivian公司匯集大數據消費資料，即可獲得<strong>20%現金回饋</strong>，全新的大數據時代合作模式，同時也是目前全球最高的現金回饋率。
